# vibe

./: .gitignore  AGENTS.md  Agents.md  CHANGELOG.md  CLAUDE.md  LICENSE  README.md  WARP.md  build-plugin.sh  install.sh  package.json  pnpm-lock.yaml  turbo.json
.claude-plugin/: plugin.json  (+1 more)
cli/: README.md  pyproject.toml
cli/docs/: commands-and-flow.md
cli/src/vibe/: __init__.py  app.py  cursor.py  doctor.py  errors.py  hook.py  machine.py  markers.py  orders.py  policy.py  rules.py
cli/src/vibe/_assets/skills/spec/: strategy.md
cli/src/vibe/_assets/skills/spec/reference/: design.md  product.md
cli/src/vibe/_assets/skills/spec/scripts/: lessons-for.sh  promote.sh
cli/src/vibe/_assets/skills/vibe/: README.md  setup.md  state-machine.json
cli/src/vibe/_assets/skills/vibe/scripts/: doctor.sh  merge-agents.sh  orders.sh  set-state.sh  validate-state.sh
cli/src/vibe/commands/: doctor_cmd.py  flow_cmds.py  init_cmd.py  lifecycle_cmd.py  plugins_cmd.py  rules_cmd.py  spec_cmd.py
cli/src/vibe/provision/: agents_md.py  plugins.py  settings.py  skills.py
cli/src/vibe/ui/: banner.py  console.py  theme.py
cli/tests/: conftest.py  test_agents_md.py  test_assets_sync.py  test_banner.py  test_cursor.py  test_doctor.py  test_flow_cmds.py  test_hook.py  test_hook_importcost.py  test_init.py  test_lifecycle.py  test_machine.py  test_markers.py  test_orders.py  test_parity_orders.py  test_parity_policy.py  test_parity_rules.py  test_plugins.py  test_policy.py  test_rules.py  test_settings.py  test_skills.py  test_smoke.py  test_spec_cmd.py  test_verify_fixes.py
(+297 files in other folders)
