[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "vibe-flow"
version = "0.1.0"
description = "Self-hosting bash/Markdown/JSON workflow harness — the vibe flow CLI."
requires-python = ">=3.11"
dependencies = [
    "typer>=0.12",
    "rich>=13.7",
    "pydantic>=2.5",
]

[project.scripts]
vibe = "vibe.app:main"
vibe-hook = "vibe.hook:main"

[dependency-groups]
dev = ["pytest>=8"]

[tool.hatch.build.targets.wheel]
packages = ["src/vibe"]
# Ship the entire vendored asset subtree (all file types: .json/.md/.sh) in the
# wheel and the editable install, immune to any VCS ignore that might drop them.
artifacts = ["src/vibe/_assets/**/*"]
